--- a/TpSystem/PPOUI/TpSystem/Config.json
+++ b/TpSystem/PPOUI/TpSystem/Config.json
@@ -1,7 +1,42 @@
 {
-	"RandomTransmission": true,
-	"RandomTransferSettings": {
-		"Min": 500,
-		"Max": 9000
+	"Command": {
+		"name": "tps",
+		"Describe": "传送系统"
+	},
+	"Money": {
+		"Enable": true,
+		"LLMoney": true,
+		"MoneyName": "money"
+	},
+	"Home": {
+		"Enable": true,
+		"CreateHome": 1,
+		"GoHome": 1,
+		"EditHome": 1,
+		"DeleteHome": 1
+	},
+	"Warp": {
+		"Enable": true,
+		"GoWarp": 1
+	},
+	"Player": {
+		"Enable": true,
+		"Player_Player": 1,
+		"Player_Home": 1
+	},
+	"Delath": {
+		"Enable": true,
+		"GoDelath": 1
+	},
+	"TPR": {
+		"Enable": true,
+		"Min": 1000,
+		"Max": 5000,
+		"Money": 1
+	},
+	"MergeRequest": {
+		"Enable": true,
+		"sendRequest": 1,
+		"DeleteRequest": 1
 	}
 }
