创建KVDB数据库

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "system": "readonly",
     "Version": "readonly",
     "PermType": "readonly",
+    "KVDatabase": "readonly",
     "ParamType": "readonly"
   },
   "rules": {
