--- a/.github/workflows/Build-TPSystem.yml
+++ b/.github/workflows/Build-TPSystem.yml
@@ -36,19 +36,12 @@ jobs:
               with:
                   version: 8
 
-            - name: LSE-Modules => main
+            - name: HelperLib => lse
               run: |
-                cd ./projects/LSE-Modules
-                git checkout main
+                cd ./projects/HelperLib
+                git checkout lse
                 git branch
-                cd ../../
-
-            - name: LSE-TPSystem => main
-              run: |
-                cd ./projects/LSE-TPSystem
-                git checkout main
-                git branch
-                cd ../../
+                cd ../
 
             - name: 运行 pnpm install
               run: pnpm install
