fix TPSystem action file path error

--- a/.github/workflows/Build-TPSystem.yml
+++ b/.github/workflows/Build-TPSystem.yml
@@ -38,7 +38,7 @@ jobs:
 
             - name: HelperLib => lse
               run: |
-                cd ./projects/HelperLib
+                cd ./HelperLib
                 git checkout lse
                 git branch
                 cd ../
