--- a/.github/workflows/Build-FakePlayer.yml
+++ b/.github/workflows/Build-FakePlayer.yml
@@ -1,15 +1,15 @@
-name: Build UMenu
+name: Build FakePlayer
 
 on:
     push:
         paths:
-            - .github/workflows/Build-UMenu.yml
-            - projects/UMenu/**
+            - .github/workflows/Build-FakePlayer.yml
+            - projects/FakePlayer/**
             - projects/LSE-Modules/**
     pull_request:
         paths:
-            - .github/workflows/Build-UMenu.yml
-            - projects/UMenu/**
+            - .github/workflows/Build-FakePlayer.yml
+            - projects/FakePlayer/**
             - projects/LSE-Modules/**
     workflow_dispatch:
 
@@ -46,16 +46,16 @@ jobs:
             - name: 运行 pnpm install
               run: pnpm install
 
-            - name: 单独编译 UMenu
-              run: pnpm -r --filter=./projects/UMenu run build
+            - name: 单独编译 FakePlayer
+              run: pnpm -r --filter=./projects/FakePlayer run build
 
             - name: 运行 npm run pack
-              run: npm run pack ./projects/UMenu/dist
+              run: npm run pack ./projects/FakePlayer/dist
 
             - name: 上传文件
               uses: actions/upload-artifact@v2
               with:
-                  name: UMenu
-                  path: UMenu-*.zip
+                  name: FakePlayer
+                  path: FakePlayer-*.zip
                   # 没有找到文件则报错
                   if-no-files-found: error
