--- a/.github/workflows/Build-UMenu.yml
+++ b/.github/workflows/Build-UMenu.yml
@@ -50,7 +50,7 @@ jobs:
               run: pnpm -r --filter=./projects/UMenu run build
 
             - name: 运行 npm run pack
-              run: npm run pack ./projects/UMenu/dist
+              run: npm run pack ./projects/UMenu/dist/UMenu.js
 
             - name: 上传文件
               uses: actions/upload-artifact@v2
